use-cases/nic-examples/ingress-resources/basic-auth/coffee-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-coffee-minion
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/basic-auth-secret: "coffee-passwd"
    nginx.org/basic-auth-realm: "Coffee"    
spec:
  ingressClassName: nginx-plus
  rules:
  - host: cafe.f5k8s.net
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
